# jvm8

./: CMakeLists.txt  README.md  cmd.cpp  cmd.h  main.cpp
classpath/: AttributeInfo.cpp  AttributeInfo.h  ClassFile.cpp  ClassFile.h  ClassPathEntry.cpp  ClassPathEntry.h  ClassReader.cpp  ClassReader.h  ConstantInfo.cpp  ConstantInfo.h  ConstantPool.cpp  ConstantPool.h  MemberInfo.cpp  MemberInfo.h
instructions/: ByteCode.h  ByteCodeReader.h  Instruction.cpp  Instruction.h  InstructionFactory.cpp  InstructionFactory.h
instructions/comparisons/: If_icmp.h  Ifcond.h  dcmg.h  fcmg.h  if_acmp.h  lcmp.h
instructions/constants/: Constants.h  Ipush.h  Ldc.h
instructions/control/: Goto.h  Lookup_switch.h  Return.h  Table_switch.h
instructions/conversions/: D2x.h  F2x.h  I2x.h  L2x.h
instructions/extended/: Goto_w.h  Ifnull.h  Wide.h
instructions/loads/: Aload.h  Dload.h  Fload.h  Iload.h  Lload.h  XAload.h
instructions/math/: Add.h  And.h  Div.h  Iinc.h  Mul.h  Neg.h  Or.h  Rem.h  Sh.h  Sub.h  xor.h
instructions/references/: Checkcast.hpp  Getfield.hpp  Getstatic.hpp  Invokespecial.hpp  Invokevirtual.hpp  New.h  Putfield.hpp  Putstatic.hpp  instanceof.hpp
instructions/stack/: Dup.h  Pop.h  Swap.h
instructions/stores/: Astore.h  Dstore.h  Fstore.h  Istore.h  Lstore.h  XAstore.h
lib/: zlibwapi.lib
rtda/: Frame.cpp  Frame.h  LocalVars.cpp  LocalVars.h  OperandStack.cpp  OperandStack.h  Solt.cpp  Solt.hpp  Stack.cpp  Stack.h  Thread.cpp  Thread.h  interpret.cpp  interpret.h
rtda/heap/: ClassLoader.cpp  ClassLoader.hpp  Constant.cpp  Constant.hpp  ConstantPoolRun.cpp  ConstantPoolRun.hpp  Field.cpp  Field.hpp  JClass.cpp  JClass.hpp  Method.cpp  Method.hpp  Object.cpp  Object.h  classHierarchy.hpp
test/: ClassPathEntryTest.cpp  ClassPathEntryTest.h  ConstantsTest.h
util/: BasicType.h  MathUtil.hpp
